# opengl_cuda_enc

./: CMakeLists.txt
Render/: ContextEGL.cpp  ContextEGL.h  NvCodecRender.cpp  stb_image_write.h
